# avial

./: CMakeLists.txt  README.md  avial.mlir  main.cc  scratchpad.txt  system_config.json  system_configold.json
analysis/: arrayPartitionAnalysis.h  broadcastAnalysis.h  dataDeps.h  depGraph.h  insoutAnalysis.h  polyhedralAnalysis.h
conversions/: MPIToLLVM.cc  affinetoavial.h  avial.code-workspace  avialirtompi.h  lowerConvergeOp.h  lowerReplicateOp.h  stdtoavial.h
dialect/: CMakeLists.txt  avial.td  passes.td
genirs/: 2mm  2mm.ll  2mm.mlir  2mm_main.c  3mm.ll  3mm.mlir  3mm_main.c  a.out  add2d  gemm  gemm.ll  gemm.mlir  gemm_program  intermediate.mlir  intermediate_mpi.mlir  intermediate_replicate.mlir  jacobi  jacobi_main.c  main  main.c  matmul.ll  matmul.mlir  matmul_poly.ll  matmul_poly.mlir  mgpuruntime.cc  mixed_main.c  mpi_main.cc  mvt.ll  mvt.mlir  output.txt  sample.ll  syr2k.ll  syr2k.mlir  syr2k_main.c
genirs/2mm.dSYM/Contents/: Info.plist
genirs/2mm.dSYM/Contents/Resources/DWARF/: 2mm
genirs/2mm.dSYM/Contents/Resources/Relocations/aarch64/: 2mm.yml
genirs/main.dSYM/Contents/Resources/DWARF/: main
genirs/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
genirs/mpi/: a.out  main.c  main.ll
includes/: avialDialect.h  avialEnums.h  avialOps.h  avialTypes.h  system_config.h  utils.h
libs/: avialDialect.cc  avialOps.cc  utils.cc
tests/: 2mm.mlir  Makefile  TEST_README.md  analysis.txt  analyze_tests.py  atax.mlir  gemm.mlir  jacobi2d.mlir  matmul.mlir  matmul_affine.mlir  matmul_decompose.mlir  matmul_poly.mlir  matmul_poly2.mlir  run_tests.sh  symm.mlir  syr2k.mlir  test_per_pass.sh
tests/dhir/: sample.mlir
tests/manual/jacobi_/: jacobi  jacobi.cc  plot.py
tests/manual/jacobi_/outputs/: dhir_500.txt  out_500.txt
tests/mixed/: sg2.mlir
tests/polybench/: 2mm.mlir  3mm.mlir  add2d.mlir  bicg.mlir  doitgen.mlir  floyd_warshall.mlir  gemm.mlir  jacobi.mlir  matmul_affine.mlir  mvt.mlir  seidel.mlir  symm.mlir  syr2k.mlir  syrk.mlir  trisolv.mlir  trmm.mlir
